# specloom

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md
.codex/: SKILLS.md
.codex/skills/authoring-transform-plan/: SKILL.md
.codex/skills/generating-ui-from-ui-spec-ron/: SKILL.md
.codex/skills/generating-ui-spec-ron/: SKILL.md
.codex/skills/inferring-repeat-element-ids/: SKILL.md
.codex/skills/node-grounding-for-transform/: SKILL.md
.codex/skills/parallel-phase-workflow/agents/: openai.yaml
.codex/skills/planning-implementation-work/: SKILL.md
.codex/skills/recognizing-layout/: SKILL.md
.codex/skills/simplifying-system-components/: SKILL.md
crates/agent_context/: Cargo.toml
crates/agent_context/src/: lib.rs  search.rs
crates/asset_pipeline/: Cargo.toml
crates/asset_pipeline/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: commands.rs  e2e_agent_workflow.rs  e2e_generate.rs  integration_smoke.rs
crates/cli/tests/fixtures/: generate_expected_output.json
crates/cli/tests/support/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: agent_context.rs  agent_runner.rs  hash.rs  lib.rs  llm_bundle.rs  tests.rs  ui_spec.rs
crates/core/src/ui_spec/: transform_plan.rs
crates/figma_client/: Cargo.toml
crates/figma_client/src/: lib.rs
crates/figma_normalizer/: Cargo.toml
crates/figma_normalizer/src/: lib.rs
crates/layout_infer/: Cargo.toml
crates/layout_infer/src/: lib.rs
crates/llm_bundle/: Cargo.toml
crates/llm_bundle/src/: lib.rs
crates/llm_codegen/: Cargo.toml
crates/llm_codegen/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: asset_pipeline.rs  lib.rs  tests.rs
crates/orchestrator/src/agent_context/: search.rs
crates/orchestrator/src/figma_client/: mod.rs  normalizer.rs
crates/orchestrator/src/ui_spec/: build.rs  mod.rs  model.rs  tests.rs
crates/review_report/: Cargo.toml
crates/review_report/src/: lib.rs
crates/swiftui_ast/: Cargo.toml
crates/swiftui_ast/src/: lib.rs
crates/swiftui_codegen/: Cargo.toml
crates/swiftui_codegen/src/: lib.rs
crates/ui_blueprint/: Cargo.toml
crates/ui_blueprint/src/: lib.rs
crates/ui_spec/: Cargo.toml
crates/ui_spec/src/: build.rs  lib.rs  model.rs  tests.rs  transform_plan.rs
docs/: agent-playbook.md  commit-style.md  figma-ui-coder.md  proposal.md
docs/plans/: 2026-03-04-figma-swiftui-generator-design.md  2026-03-04-figma-swiftui-generator.md  2026-03-04-live-figma-auth-fetch-implementation.md  2026-03-04-project-readiness-implementation.md  2026-03-04-ui-blueprint-llm-generation-design.md  2026-03-04-ui-blueprint-llm-generation.md  2026-03-05-agent-transform-build-spec.md  2026-03-05-end2end-agent-workflow-design.md  2026-03-05-end2end-agent-workflow.md  2026-03-05-figma-hybrid-agent-generation-design.md  2026-03-05-figma-hybrid-agent-generation.md  2026-03-06-prepare-llm-bundle-transform-plan-design.md  2026-03-06-prepare-llm-bundle-transform-plan.md  2026-03-06-release-cached-instruction-loading-design.md  2026-03-06-release-cached-instruction-loading.md  next-stage-contract-map.md
docs/plans/boards/: 2026-03-04-phase-04-stage-execution-board.md  2026-03-04-phase-05-contract-expansion-board.md  2026-03-04-phase-06-input-stages-board.md  2026-03-04-phase-07-infer-spec-board.md  2026-03-04-phase-08-codegen-assets-board.md  2026-03-04-phase-09-e2e-pipeline-board.md  2026-03-04-phase-10-usability-release-board.md  2026-03-04-phase-11-live-figma-fetch-board.md  2026-03-04-phase-12-ui-blueprint-llm-board.md  2026-03-05-phase-13-hybrid-agent-run-and-consume-board.md  2026-03-05-phase-14-agent-transform-build-spec-board.md  2026-03-05-phase-15-end2end-agent-workflow-board.md  README.md
docs/plans/templates/: parallel-phase-board-template.md
scripts/: verify_workspace.sh
skills/parallel-phase-workflow/: SKILL.md
