[workspace]
members = [
  "crates/cli",
  "crates/figma_client",
  "crates/figma_normalizer",
  "crates/layout_infer",
  "crates/ui_spec",
  "crates/ui_blueprint",
  "crates/llm_bundle",
  "crates/llm_codegen",
  "crates/swiftui_ast",
  "crates/swiftui_codegen",
  "crates/asset_pipeline",
  "crates/review_report",
  "crates/orchestrator",
]
resolver = "2"
