[workspace]
members = [
  "crates/cli",
  "crates/figma_client",
  "crates/figma_normalizer",
  "crates/layout_infer",
  "crates/ui_spec",
  "crates/asset_pipeline",
  "crates/orchestrator",
  "crates/agent_context",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WendellXY/forge"
homepage = "https://github.com/WendellXY/forge"
