[workspace]
members = [
  "crates/cli",
  "crates/core",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Wendell"]
repository = "https://github.com/WendellXY/specloom"
homepage = "https://github.com/WendellXY/specloom"
