[package]
name = "forge-agent-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent context and deterministic search index contracts for Forge."
documentation = "https://docs.rs/forge-agent-context"
keywords = ["figma", "ui", "search", "pipeline", "agent"]
categories = ["data-structures", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
