[package]
name = "forge-asset-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic asset manifest generation for Forge pipeline outputs."
documentation = "https://docs.rs/forge-asset-pipeline"
keywords = ["figma", "assets", "ui", "pipeline", "deterministic"]
categories = ["data-structures", "development-tools"]

[dependencies]
figma_normalizer = { package = "forge-figma-normalizer", path = "../figma_normalizer", version = "=0.1.0" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
