[package]
name = "forge-figma-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for the deterministic Forge Figma-to-spec pipeline."
documentation = "https://docs.rs/forge-figma-pipeline"
keywords = ["figma", "cli", "ui", "pipeline", "codegen"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
core = { package = "forge-figma-core", path = "../orchestrator", version = "=0.2.0" }
serde_json = "1.0"
url = "2.5"
