[package]
name = "specloom-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for the deterministic Specloom Figma-to-spec pipeline."
documentation = "https://docs.rs/specloom-cli"
keywords = ["figma", "cli", "ui", "pipeline", "codegen"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "specloom"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
core = { package = "specloom-core", path = "../core", version = "=0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
url = "2.5"
