[package]
name = "forge-figma-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed Figma API fetch and screenshot client contracts for Forge."
documentation = "https://docs.rs/forge-figma-client"
keywords = ["figma", "api", "ui", "pipeline", "client"]
categories = ["api-bindings", "development-tools"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
