[package]
name = "forge-figma-normalizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Canonical normalization of raw Figma payloads into stable Forge contracts."
documentation = "https://docs.rs/forge-figma-normalizer"
keywords = ["figma", "normalization", "ui", "pipeline", "serde"]
categories = ["data-structures", "development-tools"]

[dependencies]
figma_client = { package = "forge-figma-client", path = "../figma_client", version = "=0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
