[package]
name = "forge-layout-infer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic layout inference heuristics for normalized Forge node trees."
documentation = "https://docs.rs/forge-layout-infer"
keywords = ["figma", "layout", "ui", "pipeline", "inference"]
categories = ["algorithms", "development-tools"]

[dependencies]
figma_normalizer = { package = "forge-figma-normalizer", path = "../figma_normalizer", version = "=0.2.0" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
