[package]
name = "forge-figma-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Stage orchestration and artifact lifecycle for the Forge pipeline."
documentation = "https://docs.rs/forge-figma-orchestrator"
keywords = ["figma", "orchestrator", "ui", "pipeline", "deterministic"]
categories = ["data-structures", "development-tools"]

[dependencies]
agent_context = { package = "forge-agent-context", path = "../agent_context", version = "=0.2.0" }
asset_pipeline = { package = "forge-asset-pipeline", path = "../asset_pipeline", version = "=0.2.0" }
figma_client = { package = "forge-figma-client", path = "../figma_client", version = "=0.2.0" }
figma_normalizer = { package = "forge-figma-normalizer", path = "../figma_normalizer", version = "=0.2.0" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ui_spec = { package = "forge-ui-spec", path = "../ui_spec", version = "=0.2.0" }
