[package]
name = "forge-figma-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core contracts and stage execution runtime for the Forge pipeline."
documentation = "https://docs.rs/forge-figma-core"
keywords = ["figma", "core", "ui", "pipeline", "deterministic"]
categories = ["data-structures", "development-tools"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
