[package]
name = "review_report"
version = "0.1.0"
edition = "2024"

[dependencies]
asset_pipeline = { path = "../asset_pipeline" }
figma_normalizer = { path = "../figma_normalizer" }
layout_infer = { path = "../layout_infer" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
